feat: parallel download from fs; support download index.json only
