# manager/docs/swagger.json
@@ -83,6 +83,12 @@
                         "name": "task_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "true/false: Only download index json",
+                        "name": "indexOnly",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -182,11 +188,15 @@
     "definitions": {
         "handler.CreatePagesRequest": {
             "type": "object",
-            "required": [
-                "urls"
-            ],
             "properties": {
+                "pages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.Page"
+                    }
+                },
                 "urls": {
+                    "description": "deprecated",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -203,7 +213,14 @@
                 "name": {
                     "type": "string"
                 },
+                "pages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.Page"
+                    }
+                },
                 "urls": {
+                    "description": "deprecated",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -232,6 +249,20 @@
                     "type": "string"
                 },
                 "userID": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.Page": {
+            "type": "object",
+            "properties": {
+                "browser": {
+                    "type": "boolean"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "url": {
                     "type": "string"
                 }
             }
